Meta tags update

--- a/about.html
+++ b/about.html
@@ -3,34 +3,43 @@
 
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
+    <title>About Us | WebEaze</title>
+    <meta name="description" content="Meet WebEaze: elegant, effortless, and affordable web design with personalized support. Learn about our mission, team, and values.">
+  
+    <!-- SEO & indexing -->
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.webeaze.io/about">
+  
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="WebEaze">
+    <meta property="og:title" content="About Us | WebEaze">
+    <meta property="og:description" content="Discover WebEaze—our mission, team, and growth story. We make web design elegant, effortless, and affordable.">
+    <meta property="og:url" content="https://www.webeaze.io/about">
+    <meta property="og:image" content="https://webeaze.io/images/default-monochrome.png">
+    <meta property="og:image:secure_url" content="https://webeaze.io/images/default-monochrome.png">
+    <meta property="og:image:alt" content="WebEaze logo">
+  
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About Us | WebEaze">
+    <meta name="twitter:description" content="Meet the WebEaze team—bringing elegant, effortless, and affordable web design to life.">
+    <meta name="twitter:image" content="https://webeaze.io/images/default-monochrome.png">
+    <meta name="twitter:image:alt" content="WebEaze logo">
+  
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="https://webeaze.io/images/favicon.png" type="image/png">
+  
+    <!-- Styles & fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
-
-
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Us | WebEaze</title>
-    <meta name="description" content="Elegant & Effortless. Affordable. With Personalized Support.">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="css/billy-joinville.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
-
-    <meta property="og:title" content="WebEaze">
-    <meta property="og:description" content="Effortless. Affordable. With Support">
-    <meta property="og:url" content="https://www.webeaze.io/about">
-    <meta property="og:image" content="images/favicon.png">
-
-    <meta name="twitter:card" content="images/favicon.png">
-    <meta name="twitter:title" content="WebEaze - Elegant & Effortless. Affordable. With Personalized Support.">
-    <meta name="twitter:description" content="Elegant & Effortless. Affordable. With Personalized Support.">
-    <meta name="twitter:image" content="images/favicon.png">
-
-</head>
+  </head>
+  
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQM6ZR4JCB"></script>
@@ -1495,7 +1504,7 @@
     </section>
 
 
-    <section style="background: radial-gradient(circle, #736060 20%, #7851a9 100%) !important; padding: 60px 20px; text-align: center; border-radius: 0;"> <h2 style="color: white; font-size: 35px;">Elegant Websites. Ongoing Support. No Hourly Rates.</h2> <p style="color: white; font-size: 16px; max-width: 700px; margin: 20px auto; text-align: center;">We actually stand by your website from the moment you engage with us. Schedule a free consultation, choose a plan, and your website will be tailored to your results in no time.</p>
+    <section style="background: #7851a9 !important; padding: 60px 20px; text-align: center; border-radius: 0;"> <h2 style="color: white; font-size: 35px;">Elegant Websites. Ongoing Support. No Hourly Rates.</h2> <p style="color: white; font-size: 16px; max-width: 700px; margin: 20px auto; text-align: center;">We actually stand by your website from the moment you engage with us. Schedule a free consultation, choose a plan, and your website will be tailored to your results in no time.</p>
        
 
         <br>
