--- a/pricing.html
+++ b/pricing.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en" class="page-website-setup-main">
 
-
 <head>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
-
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+  
     <title>Pricing | WebEaze</title>
     <meta name="keywords" content="WebEaze, pricing, website setup, affordable web design, personalized support, elegant websites, effortless web solutions">
-    <meta name="description" content="View our pricing plans for WebEaze, designed to be elegant, effortless, and affordable with personalized support.">
+    <meta name="description" content="View our pricing plans for WebEaze, built to be elegant, effortless, and affordable with personalized support.">
+  
+    <!-- Open Graph -->
+    <meta property="og:title" content="Pricing | WebEaze">
+    <meta property="og:description" content="Explore our simple, all-inclusive pricing plans designed for small businesses.">
+    <meta property="og:url" content="https://webeaze.io/pricing.html">
+    <meta property="og:image" content="https://webeaze.io/images/default-monochrome.png">
+    <meta property="og:image:secure_url" content="https://webeaze.io/images/default-monochrome.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="WebEaze pricing plans overview">
+  
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Pricing | WebEaze">
+    <meta name="twitter:description" content="Explore our simple, all-inclusive pricing plans designed for small businesses.">
+    <meta name="twitter:image" content="https://webeaze.io/images/default-monochrome.png">
+    <meta name="twitter:image:alt" content="WebEaze pricing overview">
+  
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="css/billy-joinville.css" rel="stylesheet">
+  
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
-
-    <meta property="og:title" content="WebEaze">
-    <meta property="og:description" content="Elegant & Effortless. Affordable. With Personalized Support.">
-    <meta property="og:url" content="https://www.webeaze.io/pricing.html">
-    <meta property="og:image" content="images/favicon.png">
-
-    <meta name="twitter:card" content="images/favicon.png">
-    <meta name="twitter:title" content="WebEaze - Elegant & Effortless. Affordable. With Personalized Support.">
-    <meta name="twitter:description" content="Elegant & Effortless. Affordable. With Personalized Support.">
-    <meta name="twitter:image" content="images/favicon.png">
-
-</head>
+  </head>
+  
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQM6ZR4JCB"></script>
