--- a/index.html
+++ b/index.html
@@ -3,36 +3,55 @@
 
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+    <title>WebEaze: Stunning, Affordable Websites</title>
+    <meta name="description" content="Stunning, affordable websites with unlimited support. Built for tutors, trades, and travel pros.">
+    <meta name="keywords" content="WebEaze, web design, affordable websites, unlimited support, educators, travel agents, local trades, website setup, web design agency">
+  
+    <link rel="canonical" href="https://www.webeaze.io/">
+  
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="WebEaze | Websites Made Eazily for Small Businesses">
+    <meta property="og:description" content="Effortless. Affordable. With Support.">
+    <meta property="og:url" content="https://www.webeaze.io">
+    <meta property="og:image" content="https://webeaze.io/images/default-monochrome.png">
+  
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="WebEaze - Stunning, Affordable Websites.">
+    <meta name="twitter:description" content="WebEaze creates stunning, affordable websites with unlimited support for tutors, trades, and travel professionals.">
+    <meta name="twitter:image" content="https://webeaze.io/images/default-monochrome.png">
+  
+    <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-4466809892932219">
+  
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
+  
+    <!-- CSS and Fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="css/billy-joinville.css" rel="stylesheet">
+  
+    <!-- JS Libraries -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
-
-
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WebEaze: Stunning, Affordable Websites</title>
-    <meta name="keywords" content="WebEaze, web design, affordable websites, unlimited support, educators, travel agents, local trades, website setup, web design agency">
-    <meta name="description" content="WebEaze creates stunning, affordable websites with unlimited support. We proudly serve educators, travel agents, and local trades.">
-    <link href="css/billy-joinville.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
-
-    <meta property="og:title" content="WebEaze">
-    <meta property="og:description" content="Effortless. Affordable. With Support.">
-    <meta property="og:url" content="https://www.webeaze.io">
-    <meta property="og:image" content="images/default-monochrome.png">
-
-    <meta name="twitter:card" content="images/default-monochrome.png">
-    <meta name="twitter:title" content="WebEaze - Stunning, Affordable Websites.">
-    <meta name="twitter:description" content="WebEaze is a web design agency who creates stunning, affordable websites with unlimited support. We proudly serve educators, travel agents, and local trades. ">
-    <meta name="twitter:image" content="images/default-monochrome.png">
-    <meta name="google-adsense-account" content="ca-pub-4466809892932219">
-
-</head>
+  
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQM6ZR4JCB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-JQM6ZR4JCB');
+    </script>
+  </head>
+  
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQM6ZR4JCB"></script>
