Index issues fixed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta name="description" content="Stunning, affordable websites with unlimited support. Built for tutors, trades, and travel pros.">
     <meta name="keywords" content="WebEaze, web design, affordable websites, unlimited support, educators, travel agents, local trades, website setup, web design agency">
   
-    <link rel="canonical" href="https://www.webeaze.io/">
+    <link rel="canonical" href="https://www.webeaze.io/index.html"/>
+
   
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website">
