--- a/pricing.html
+++ b/pricing.html
@@ -8,6 +8,7 @@
     <title>Pricing | WebEaze</title>
     <meta name="keywords" content="WebEaze, pricing, website setup, affordable web design, personalized support, elegant websites, effortless web solutions">
     <meta name="description" content="View our pricing plans for WebEaze, built to be elegant, effortless, and affordable with personalized support.">
+    <link rel="canonical" href="https://www.webeaze.io/pricing.html"/>
   
     <!-- Open Graph -->
     <meta property="og:title" content="Pricing | WebEaze">
