--- a/blog.html
+++ b/blog.html
@@ -1486,7 +1486,7 @@ We know this is a big change, but we believe this was the right decision for us.
     <div class="footer-grid">
   
       <div class="footer-col">
-        <h4>WebEaze</h4>
+        <img src="images/default-monochrome-white.svg" style="max-width: 40%;" alt="WebEaze Logo" class="footer-logo">
         <p>Stunning websites with support that scales with your business. One plan. One price. One powerful online presence.</p>
 
       </div>
