--- a/consultation.html
+++ b/consultation.html
@@ -1497,7 +1497,7 @@
     <div class="footer-grid">
   
       <div class="footer-col">
-        <h4>WebEaze</h4>
+        <img src="images/default-monochrome-white.svg" style="max-width: 40%;" alt="WebEaze Logo" class="footer-logo">
         <p>Stunning websites with support that scales with your business. One plan. One price. One powerful online presence.</p>
 
       </div>
