--- a/index.html
+++ b/index.html
@@ -1960,24 +1960,9 @@ content: "";
         <section id="faq" class="faq-section fade-in-on-scroll">
         
             <br>
-            <br>
 
 
-            <div class="faq-item">
-                <h3 class="faq-question">What is WebEaze? <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer">
-                    WebEaze is a niche-focused web design company that creates affordable, professional websites for small businesses—especially tutors, trade professionals, and travel experts. From design and hosting to updates and support, we make it easy to launch and grow your online presence without the tech overwhelm.
-                </p>
-            </div>
 
-            <div class="faq-item">
-                <h3 class="faq-question">Do you have any samples?<span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer">
-                    Absolutely. You'll find examples of tutoring, travel, and trade websites we've built <a href="index.html#samples-are-important"><strong>above on this page</strong></a>. Need something specific? <a href="contact-us.html"><strong>Contact us</strong></a> and we'll send you tailored examples for your industry.
-
-
-                </p>
-            </div>
 
             <div class="faq-item">
                 <h3 class="faq-question">What if I have an existing website? <span class="arrow"> ▼ </span></h3>
@@ -2143,7 +2128,7 @@ content: "";
           <div class="testimonial-card text-center p-4" style="background: #5d4037c2; border-radius: 10px;">
             <img src="https://i.pravatar.cc/150?img=47" alt="Jenna P." class="testimonial-avatar mb-3" style="width: 80px; border-radius: 50%;">
             <p style="color: white;">"Before working with WebEaze, my site was just a list of services. Now it's a professional platform that I can use where parents can actually book and pay online. It has made my tutoring business feel like a real brand.”</p>
-            <h4 style="color: #fff;">— Jenna P., Private SAT Tutor</h4>
+            <h4 style="color: #fff; font-size: 15px; padding: 10px;">— Jenna P., Private SAT Tutor</h4>
           </div>
         </div>
       
@@ -2151,7 +2136,7 @@ content: "";
           <div class="testimonial-card text-center p-4" style="background: #5D4037c2; border-radius: 10px;">
             <img src="https://i.pravatar.cc/150?img=64" alt="Malik G." class="testimonial-avatar mb-3" style="width: 80px; border-radius: 50%;">
             <p style="color: white;">"I used to rely only on word-of-mouth, but now my website does the talking for me. Clients can see my services, reviews, and even request estimates right from their phones. WebEaze made it simple. And already paying off!”</p>
-            <h4 style="color: #fff;">— Malik G., Licensed Electrician</h4>
+            <h4 style="color: #fff; font-size: 15px; padding: 10px;">— Malik G., Licensed Electrician</h4>
           </div>
         </div>
       </div>
@@ -2195,7 +2180,7 @@ content: "";
     <div class="footer-grid">
   
       <div class="footer-col">
-        <h4>WebEaze</h4>
+        <img src="images/default-monochrome-white.svg" style="max-width: 40%;" alt="WebEaze Logo" class="footer-logo">
         <p>Stunning websites with support that scales with your business. One plan. One price. One powerful online presence.</p>
 
       </div>
