--- a/contact-us.html
+++ b/contact-us.html
@@ -1473,7 +1473,7 @@ section:hover {
     <div class="footer-grid">
   
       <div class="footer-col">
-        <h4>WebEaze</h4>
+        <img src="images/default-monochrome-white.svg" style="max-width: 40%;" alt="WebEaze Logo" class="footer-logo">
         <p>Stunning websites with support that scales with your business. One plan. One price. One powerful online presence.</p>
 
       </div>
