--- a/pricing.html
+++ b/pricing.html
@@ -1839,7 +1839,7 @@
     <div class="footer-grid">
   
       <div class="footer-col">
-        <h4>WebEaze</h4>
+        <img src="images/default-monochrome-white.svg" style="max-width: 40%;" alt="WebEaze Logo" class="footer-logo">
         <p>Stunning websites with support that scales with your business. One plan. One price. One powerful online presence.</p>
 
       </div>
@@ -1975,6 +1975,10 @@
         fadeIn();
     });
 </script>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
 
