--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1276,7 +1276,7 @@ Thank you for choosing WebEaze. We appreciate your business. Please read our ref
     <div class="footer-grid">
   
       <div class="footer-col">
-        <h4>WebEaze</h4>
+        <img src="images/default-monochrome-white.svg" style="max-width: 40%;" alt="WebEaze Logo" class="footer-logo">
         <p>Stunning websites with support that scales with your business. One plan. One price. One powerful online presence.</p>
 
       </div>
