--- a/index.html
+++ b/index.html
@@ -1641,7 +1641,7 @@ content: "";
     <header id="header-services" class="video-header">
    
 
-    <img src="images/bg-header.png" alt="Background Header" class="bg-video">
+    <img src="images/bg-header.jpeg" alt="Background Header" class="bg-video">
 
 
 
