--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
         border-radius: 0;
     }
 
+    #header-services {
+
+padding-top: 100px !important;
+}
+
     section:hover {
   transform: none !important;
   transition: none !important;
