--- a/index.html
+++ b/index.html
@@ -1653,14 +1653,13 @@ content: "";
   text-align: center;
 }
 
-.fade-in-on-scroll h2 {
-    font-size: 30px; 
+    @media (max-width: 768px) {
+            .how-it-works-parallax {
+                background-attachment: scroll; 
+            }
+        }
+            
 
-}
-
-.fade-in-on-scroll p {
-
-}
 
 
 
@@ -1807,6 +1806,12 @@ content: "";
               text-align: center;
               color: white;
             }
+
+            @media (max-width: 768px) {
+            .promo-section-parallax {
+                background-attachment: scroll; 
+            }
+        }
             
             .promo-section-parallax h2 {
               font-size: 35px;
