--- a/index.html
+++ b/index.html
@@ -1949,8 +1949,8 @@ content: "";
 
             <h1 id="setup-packages-heading"><strong>Smart Pricing</strong></h1>
             <p id="intro-services-html-next2">
-              Monthly plans require adding a one-time 
-              <strong><a href="https://webeaze.tawk.help/article/setup-fee"> $299 setup fee</a></strong> to your cart before checking out.
+            
+                We offer flexible monthly or yearly plans with no long-term contracts. All plans include ongoing maintenance and SEO support. 
             </p>
 
 
@@ -1962,8 +1962,12 @@ content: "";
             publishable-key="pk_live_51QHtphC23hYItUA5GFcY5FugjhNv8dFVHSye9hlIyZvTK6cnYTwaOnRfhMRxPVh7YDogWkqRlLfw7b3HMTWFcjit00Hvf2OUYE">
             </stripe-pricing-table>
 
-            <br>
-            <br>
+       
+
+            <p id="intro-services-html-next2">
+                Monthly plans require adding a one-time 
+                <strong><a href="https://webeaze.tawk.help/article/setup-fee"> $299 setup fee</a></strong> to your cart before checking out.
+              </p>
 
 
 
