--- a/index.html
+++ b/index.html
@@ -1786,8 +1786,8 @@ content: "";
     <main id="content">
         
         <section class="promo-section-parallax">
-            <h2>Summer's Here!</h2>
-            <p>
+            <h2 style="font-size: 42px !important">Summer's Here!</h2>
+            <p style="text-align: center !important;">
               We hope you're geared up for summer like we are.
               <u>Save 20%</u> on any website plan and let us take care of your website needs. <br><br>
               Use code <strong>SUMMER2025</strong> at checkout. Offer valid through June 23.
