--- a/pricing.html
+++ b/pricing.html
@@ -1664,7 +1664,7 @@
 
             </p>
 
-            <section class="promo-section" style= "padding: 60px 20px; text-align: center; background-color: transparent;"> <h2 style="color: white; font-size: 35px !important;">Summer's Here! </h2> <p style="color: white; font-size: 20px !important; max-width: 700px; margin: 20px auto; text-align: center;"> We hope you're geared up for summer like we are. Save 20% on any website plan and let us take care of your website needs-- while you focus on your summer adventures. <br><br> Use code <strong>SUMMER2025</strong> at checkout. Offer valid through June 23. </p>
+            <section class="promo-section" style= "padding: 60px 20px; text-align: center; background-color: transparent; border-radius: 100px 100px"> <h2 style="color: white; font-size: 35px !important;">Summer's Here! </h2> <p style="color: white; font-size: 20px !important; max-width: 700px; margin: 20px auto; text-align: center;"> We hope you're geared up for summer like we are. Save 20% on any website plan and let us take care of your website needs-- while you focus on your summer adventures. <br><br> Use code <strong>SUMMER2025</strong> at checkout. Offer valid through June 23. </p>
                 <a href="https://webeaze.tawk.help/article/paid-ad-management" class="cta-learn-more">Schedule A Consultation Now!</a> </section>
             </section>
 
