--- a/pricing.html
+++ b/pricing.html
@@ -1485,7 +1485,7 @@
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* Pricing Table - Mobile */
+
 @media screen and (max-width: 768px) {
   .table thead {
     display: none;
@@ -1501,14 +1501,13 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 10px;
-    background-color: #4e342e; /* Slightly lighter brown for clarity */
-    box-shadow: none; /* Remove shadow on mobile */
-  }
+    background-color: #4e342e; 
+    box-shadow: none; 
 
   .table td {
     text-align: left;
     padding: 12px 10px 12px 50%;
-    background-color: transparent; /* Neutralize colored backgrounds */
+    background-color: transparent; 
     border: none;
     box-shadow: none;
     color: white;
@@ -1526,18 +1525,19 @@
     white-space: nowrap;
   }
 
-  /* Prevent long data items from wrapping oddly */
+  
   .table td i.fas {
     font-size: 16px;
   }
 
   .table td i.fas.fa-check {
-    color: #a5d6a7; /* lighter green for visibility on dark bg */
+    color: #a5d6a7; 
   }
 
   .table td i.fas.fa-times {
     color: #ef9a9a;
   }
+}
 }
 
 
@@ -1617,13 +1617,15 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="pricing.html">Pricing</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="portal.html">Client Portal</a>
                 </li>
   
 
-                <li class="nav-item">
-                  <a class="nav-link" href="pricing.html">Pricing</a>
-                </li>
+
 
                 <li class="nav-item">
                   <a class="nav-link" href="contact-us.html">Contact Us</a><span class="sr-only">(current)</span>
