--- a/index.html
+++ b/index.html
@@ -1338,8 +1338,9 @@ padding-top: 100px !important;
 }
 
 .who-we-help-card:hover {
-  transform: translateY(-10px);
+  transform: translateY(-20px) !important;
   box-shadow: 0 12px 28px rgba(0,0,0,0.4);
+
 }
 
 .who-we-help-card:hover i {
@@ -1383,9 +1384,10 @@ padding-top: 100px !important;
 }
 
 .cta-button-schedule:hover {
+transform: translateY(-3px);
   background-color: #7851a9;
-  transform: scale(1.05);
-  box-shadow: 0 6px 18px rgba(0,0,0,0.3);
+  box-shadow: 0 6px 20px #5D4037;
+  text-decoration: none;
 }
 
 .slam-in {
@@ -1788,18 +1790,17 @@ content: "";
     <main id="content">
         
         <section class="promo-section-parallax">
-            <h2 style="font-size: 42px !important">Summer's Here!</h2>
+            <h2 style="font-size: 42px !important">Boost Your Business This July </h2>
             <p style="text-align: center !important;">
-              We hope you're geared up for summer like we are.
-              <u>Save 20%</u> on any website plan and let us take care of your website needs. <br><br>
-              Use code <strong>SUMMER2025</strong> at checkout. Offer valid through June 23.
+              Summer is not slowing down, and neither should your site.  <br><br>
+              New and existing clients get 1 extra page for free through July 7. Let's give your business a summer boost. 
             </p>
-            <a href="https://webeaze.io/pricing" class="cta-button-schedule">Claim Your Discount</a>
+            <a href="https://webeaze.io/website-request" class="cta-button-schedule">Request Now!</a>
           </section>
 
           <style>
             .promo-section-parallax {
-              background-image: url('images/summer-start.jpg'); 
+              background-image: url('images/july-summer-sale.jpg'); 
               background-size: cover;
               background-position: center;
               background-repeat: no-repeat;
@@ -2069,7 +2070,7 @@ content: "";
 
 
 
-      <!-- Who we've helped styles -->
+
     <style>
       @keyframes pulseBackground {
         0% { background-position: 0% 50%; }
