Updates to page

--- a/website-request.html
+++ b/website-request.html
@@ -1418,7 +1418,7 @@ section:hover {
             <h1 id="random-question"></h1> 
             <br>
             
-        <p style="color: white; font-size: 20px !important; max-width: 700px; margin: 20px auto; text-align: center;"> Fields required are marked with an asterisk (*). We will respond to your request within a few hours. </p>
+        <p style="color: white; font-size: 20px !important; max-width: 700px; margin: 20px auto; text-align: center;"> Fields required are marked with an asterisk (*). We'll respond to your request within a few hours. </p>
 
         <br>
 
