--- a/index.html
+++ b/index.html
@@ -1793,7 +1793,8 @@ content: "";
             <h2 style="font-size: 42px !important">Boost Your Business This July </h2>
             <p style="text-align: center !important;">
               Summer is not slowing down, and neither should your site.  <br><br>
-              New and existing clients get 1 extra page for free through July 7. Let's give your business a summer boost. 
+              New and existing clients get 1 extra page for free through July 7 (a $199 value).
+              Let's give your business a summer boost. 
             </p>
             <a href="https://webeaze.io/website-request" class="cta-button-schedule">Request Now!</a>
           </section>
