--- a/pricing.html
+++ b/pricing.html
@@ -1740,7 +1740,7 @@
             <h2 style="font-size: 42px !important">Boost Your Business This July </h2> 
             
             <p style="color: white; font-size: 20px !important; max-width: 700px; margin: 20px auto; text-align: center;"> Summer is not slowing down, and neither should your site.  <br><br>
-                New and existing clients get 1 extra page for free through July 7. Let's give your business a summer boost. </p>
+                New and existing clients get 1 extra page for free through July 7 (a $199 value). Let's give your business a summer boost. </p>
             <a href="https://webeaze.io/website-request" class="cta-learn-more">Submit Your Request</a>
         </section>
 
