--- a/pricing.html
+++ b/pricing.html
@@ -574,7 +574,7 @@
 
         #intro-services-html-next2 {
 
-            font-size: 16px;
+            font-size: 20px;
             color: white;
             margin-top: 10px;
             margin-bottom: 10px;
@@ -1664,10 +1664,9 @@
 
 
             <p id="intro-services-html-next2">
-                We offer monthly or yearly plans that tailor to your business needs. All our plans include ongoing maintenance & support with SEO growth tools.  
 
-
-
+                Monthly or yearly plans that tailor to your business needs. All plans include <strong>ongoing maintenance & support</strong> with <strong>SEO growth tools</strong>.
+              
             </p>
  
 
@@ -1712,7 +1711,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr><td data-label="Feature">Custom Website Design</td><td data-label="Essential"><i class="fas fa-check"></i><br> Up to 3 pages</td><td data-label="Growth"><i class="fas fa-check"></i><br> Up to 6 pages</td>
+                  <tr><td data-label="Feature">Custom Website Design & Pages</td><td data-label="Essential"><i class="fas fa-check"></i><br> Up to 3 pages</td><td data-label="Growth"><i class="fas fa-check"></i><br> Up to 6 pages</td>
                     <td data-label="Elite"><i class="fas fa-check"></i><br> Unlimited Pages</td></tr>
 
                   <tr><td data-label="Feature">Domain & Hosting Setup</td><td data-label="Essential"> <i class="fas fa-check"></i></td>
@@ -1724,7 +1723,7 @@
                   <tr><td data-label="Feature"><a href="https://webeaze.tawk.help/article/domain-credit" target="_blank">Domain & Hosting Coverage</a></td><td data-label="Essential"> <i class="fas fa-times"></i></td><td data-label="Growth"> <i class="fas fa-check"></i><br>Up to $50</td><td data-label="Elite"> <i class="fas fa-check"></i><br></td></tr>
                   
                   <tr><td data-label="Feature">SEO Tools</td><td data-label="Essential"> <i class="fas fa-times"></i></td><td data-label="Growth"> <i class="fas fa-check"></i></td><td data-label="Elite"> <i class="fas fa-check"></i></td></tr>
-                  <tr><td data-label="Feature">Unlimited Support</td><td data-label="Essential">Email Only</td><td data-label="Growth">Email, Zoom, Live Chat</td><td data-label="Elite">Priority Email, Zoom, Live Chat</td></tr>
+                  <tr><td data-label="Feature">Unlimited Maintenance & Support</td><td data-label="Essential">Email</td><td data-label="Growth">Email, Zoom, Live Chat</td><td data-label="Elite">Expedited Email, Zoom, Live Chat</td></tr>
                   <tr><td data-label="Feature">Ad Campaign Management</td><td data-label="Essential"><i class="fas fa-times"></i></td><td data-label="Growth">
                     <i class="fas fa-times"></i></td><td data-label="Elite"> <i class="fas fa-check"></i></td></tr>
                     <tr><td data-label="Feature">Monthly Performance Reports</td><td data-label="Essential"><i class="fas fa-times"></i></td><td data-label="Growth"> <i class="fas fa-times"></i><br></td><td data-label="Elite"> <i class="fas fa-check"></i></td></tr>
