--- a/website-request.html
+++ b/website-request.html
@@ -1422,11 +1422,13 @@ section:hover {
 
         <br>
 
-        <p style="color: white; font-size: 20px !important; max-width: 700px; margin: 20px auto; text-align: center;"> This form is for active WebEaze clients only. If you're not a client yet, please <a href="https://webeaze.io/contact-us.html"><u>contact us</u></a>. </p>
+        <p style="color: white; font-size: 20px !important; max-width: 700px; margin: 20px auto; text-align: center;"> This form is for active WebEaze clients only. Not an acive client? Please <a href="https://webeaze.io/contact-us.html"><u>contact us</u></a>. </p>
          </p>
 
            
         </section>
+
+        <!-- rgb(172, 72, 72) for red banner -->
 
         <section style= "padding: 5px 5px; text-align: center; background-color: rgb(172, 72, 72);border-radius: 0;"> 
         
