--- a/consultation.html
+++ b/consultation.html
@@ -1427,7 +1427,7 @@ section:hover {
             <br>
             
         <p style="color: white; font-size: 20px !important; max-width: 700px; margin: 20px auto; text-align: center;"> 
-            Are you ready to take your online presence to the next level? Whether you're looking for a simple website setup or a comprehensive website solution, we're here to help.
+            Are you ready to take your online presence to the next level? Let's get started. 
          </p>
     
         <br>
