--- a/portal.html
+++ b/portal.html
@@ -1221,7 +1221,10 @@ p strong, p b, strong, b {
 </style>
 
 <header id="header-services" style="padding-top: 100px;">
-    <h1 id="random-question">Welcome to Your Client Portal</h1>
+    <h1 id="random-question"></h1>
+
+    <br>
+    <br>
     <p>Track your progress, request changes, and get support all in one place.</p>
 
     <h2 id="dynamic-greeting"></h2>
@@ -1288,7 +1291,7 @@ p strong, p b, strong, b {
     
         <div class="tab-content active" id="help">
 
-            <p>We offer a variety of ways to get help from us. Certain support methods are available for specific plans only. </p>
+            <p>We offer a variety of ways to get help from us.  </p>
 
             <p>
                 Our Help Center is available 24/7 for all clients. 
@@ -1304,7 +1307,7 @@ p strong, p b, strong, b {
         </div>
 
         <div class="spoiler" onclick="toggleSpoiler(this)">Add-On Request? <i class="fas fa-chevron-down arrow"></i>
-                <div class="spoiler-content">We offer a variety of add-ons to enhance your website. You can request add-ons like additional pages, live chat integration, or even e-commerce functionality. These will be charged separately from your plan. To request an add-on, please follow the steps in our <a href="https://webeaze.tawk.help/article/add-ons" target="_blank">Add-Ons Help Center</a>.</div>
+                <div class="spoiler-content">We offer a variety of add-ons to enhance your website. You can request add-ons like additional pages, live chat integration, or even e-commerce functionality. These are charged separately from your plan. Request an add-on by following the steps in our <a href="https://webeaze.tawk.help/article/add-ons" target="_blank">Add-Ons Help Center</a>.</div>
             </div>
 
         <div class="spoiler" onclick="toggleSpoiler(this)">Website Down? <i class="fas fa-chevron-down arrow"></i>
@@ -1353,8 +1356,9 @@ p strong, p b, strong, b {
             </div>
           </div>
           <div class="spoiler" onclick="toggleSpoiler(this)">Where can I track my Website Request? <i class="fas fa-chevron-down arrow"></i>
-            <div class="spoiler-content">When you submit a Website Request, we've received it and we're working on your request as soon as possible. When we make all updates as you request, we'll follow up via email. </div>
+            <div class="spoiler-content">When you submit a Website Request, we've received it and we're working on your request as soon as possible. Once we've made all requested changes, you'll be notified via email. </div>
           </div>
+          
         </div>
       </main>
 
