--- a/website-request.html
+++ b/website-request.html
@@ -1673,7 +1673,7 @@ section:hover {
   
       if (isWeekday && isBusinessHours) {
         message.textContent = "🟢 We're available now until 5:00pm Eastern Time.";
-        message.style.backgroundColor = "3CB371";
+        message.style.backgroundColor = "#3CB371";
       } else {
         message.textContent = "🔴 We're away! We'll get back to you as soon as we can. "; 
         message.style.backgroundColor = "#CD5C5C"; 
