--- a/pricing.html
+++ b/pricing.html
@@ -1667,7 +1667,9 @@
 
             <p id="intro-services-html-next2">
 
-                Monthly or yearly plans that tailor to your business needs. All plans include <strong>ongoing maintenance & support</strong> with <strong>SEO growth tools</strong>.
+                Monthly or yearly plans that tailor to your business needs. 
+                <br>
+                All plans include <strong>ongoing maintenance & support</strong> with <strong>SEO growth tools</strong>.
               
             </p>
  
