--- a/plan-success.html
+++ b/plan-success.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Success - Schedule Confirmation | WebEaze</title>
+  <title>Welcome to WebEaze | WebEaze</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="images/favicon.png" type="image/png">
@@ -51,21 +51,13 @@
 <body>
   <img src="images/webeaze-transparent.png" alt="WebEaze Logo" class="logo">
   <h1>
-    Your session is booked!
+    You're officially our newest client!
   </h1>
-  <p>Thanks for scheduling a session with WebEaze. We've sent you an email with a calendar invite. 
+  <p>Thanks for subscribing to a WebEaze plan. We've sent you an email with your next steps. Your account is now active, and you can start using our services immediately.
     
-    <br><strong>We look forward to speaking with you.</strong>
+
 </p>
 
-<div class="spoiler">
-    <button class="btn btn-light btn-primary" onclick="toggleSpoiler()">Scheduled a phone call?</button>
-    <div class="spoiler-content" style="display: none;">
-        <p>
-            If you scheduled a phone call, please ensure your phone is available at the scheduled time. We'll call you at the number you provided. Our number is (347) 377-2408. 
-        </p>
-    </div>
-</div>
 
 <script>
     function toggleSpoiler() {
@@ -87,13 +79,20 @@
     }
 </style>
 
-<p>In the meantime, check out our latest offers and Help Center for answers to common questions.</p>
+<p>Here are some resources while we work on your 
+    website.
+</p>
 
-    <a href="pricing.html" class="btn btn-light btn-lg" >View Offers</a>
+    <a href="portal.html" class="btn btn-light btn-lg" >Visit Your Client Portal</a>
 
     <br>
 
-    <a href="https://webeaze.tawk.help" class="btn btn-light btn-lg">WebEaze Help Center</a>
+    <a href="https://webeaze.tawk.help/article/website-completion" class="btn btn-light btn-lg">Website Launch Timeline</a>
+
+    <br>
+    <a href="https://webeaze.tawk.help/category/domain-support" class="btn btn-light btn-lg">
+        Connecting or Transferring Your Domain
+    </a>
 
  
   <footer>&copy; 2025 WebEaze. All rights reserved. 
