--- a/plan-success.html
+++ b/plan-success.html
@@ -35,11 +35,12 @@
       margin-bottom: 2rem;
     }
     footer {
-      position: absolute;
-      bottom: 20px;
-      font-size: 0.8rem;
-      color: #ffffff;
-    }
+  margin-top: 60px;
+  text-align: center;
+  font-size: 0.8rem;
+  color: #ffffff;
+}
+
 
     p {
         word-wrap: break-word;
@@ -53,7 +54,11 @@
   <h1>
     You're officially our newest client!
   </h1>
-  <p>Thanks for subscribing to a WebEaze plan. We've sent you an email with your next steps. Your account is now active, and you can start using our services immediately.
+  <p>Thanks for subscribing to a WebEaze plan. 
+    <br>
+    We've sent you an email with your next steps. 
+    <br>
+    Your account is now active, and you can start using our services immediately.
     
 
 </p>
