--- a/success.html
+++ b/success.html
@@ -35,11 +35,12 @@
       margin-bottom: 2rem;
     }
     footer {
-      position: absolute;
-      bottom: 20px;
-      font-size: 0.8rem;
-      color: #ffffff;
-    }
+  margin-top: 60px;
+  text-align: center;
+  font-size: 0.8rem;
+  color: #ffffff;
+}
+
 
     p {
         word-wrap: break-word;
