--- a/plan-success.html
+++ b/plan-success.html
@@ -8,19 +8,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="images/favicon.png" type="image/png">
   <style>
-    body {
-      background-color: #7851a9;
-      color: white;
-      font-family: 'Poppins', sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      text-align: center;
-      padding: 20px;
-    }
+body {
+  background-color: #7851a9;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
+  padding: 40px 20px;
+  margin: 0;
+}
+
     h1 {
       font-size: 2.5rem;
       margin-bottom: 1rem;
