--- a/plan-success.html
+++ b/plan-success.html
@@ -46,7 +46,9 @@ body {
   </style>
 </head>
 <body>
-  <img src="images/webeaze-transparent.png" alt="WebEaze Logo" class="logo">
+<a href="index.html">
+    <img src="images/webeaze-transparent.png" alt="WebEaze Logo" class="logo">
+</a>
   <h1>
     You're officially our newest client!
   </h1>
