--- a/success.html
+++ b/success.html
@@ -46,7 +46,9 @@ body {
   </style>
 </head>
 <body>
-  <img src="images/webeaze-transparent.png" alt="WebEaze Logo" class="logo">
+    <a href="index.html">
+        <img src="images/webeaze-transparent.png" alt="WebEaze Logo" class="logo">
+    </a>
   <h1>
     Your session is booked!
   </h1>
