--- a/portal.html
+++ b/portal.html
@@ -1334,9 +1334,12 @@ p strong, p b, strong, b {
         <div class="tab-content" id="whats-new">
           <h2>Latest Updates</h2>
           <ul>
-            <li>✅ We have a faster and more structured onboarding timeline for new clients. Learn more about this <a href="https://webeaze.tawk.help/article/website-completion" target="_blank">here</a>.</li>
-            <li>✅ Our Live Chat support option is available from 9am - 5pm, Mondays through Fridays. It's available for our Growth and Elite plan clients. </li>
-            <li>✅ We now have a referral program that pays $100 cash via Zelle, PayPal, Venmo or CashApp. You can learn more and start referring <a href="https://webeaze.tawk.help/article/referral" target="_blank">here</a>.</li>
+            <li>✅ For new clients, you're able to view our new structured timeline for your new website <a href="https://webeaze.tawk.help/article/website-completion" target="_blank">here</a>. We aim to be as transparent as possible during your website journey.</li> 
+            <li>✅ We offer Live Chat and Zoom Support for our Growth and Elite plan clients. More ways for you to get help when you need it the most. It's available during normal support hours of 9am - 5pm, Mondays through Fridays. </li>
+            <li>✅ Need a sale or service listed as soon as possible? We offer this as a rush request starting at only $69. You can learn more about this <a href="https://webeaze.tawk.help/article/fee-schedule" target="_blank">here</a>.</li>
+
+            </li>
+            <li>✅ Our Referral Program now pays $100 for each successful referral and client signup. It pays via Zelle, PayPal, Venmo or CashApp. You can learn more and start referring <a href="https://webeaze.tawk.help/article/referral" target="_blank">here</a>.</li>
           </ul>
         </div>
     
