--- a/website-request.html
+++ b/website-request.html
@@ -1451,8 +1451,7 @@ section:hover {
         ">
           This form is for active WebEaze clients only. Not an active client?
           <a href="https://webeaze.io/contact-us.html" style="color: #ffffff; text-decoration: underline;">
-            Contact us
-          </a>.
+            Contact Us</a>.
         </p>
       
       </section>
