--- a/plan-success.html
+++ b/plan-success.html
@@ -53,10 +53,8 @@ body {
     You're officially our newest client!
   </h1>
   <p>Thanks for subscribing to a WebEaze plan. 
-    <br>
-    We've sent you an email with your next steps. 
-    <br>
-    Your account is now active, and you can start using our services immediately.
+
+    We've sent you an email with more information. 
     
 
 </p>
