--- a/success.html
+++ b/success.html
@@ -15,6 +15,7 @@ body {
   text-align: center;
   padding: 40px 20px;
   margin: 0;
+  
 }
 
     h1 {
@@ -39,10 +40,10 @@ body {
 
 
     p {
-        word-wrap: break-word;
-        overflow-wrap: break-word;
-        white-space: normal; 
+        word-break: break-word !important; 
+        overflow-wrap: break-word !important; 
     }
+
   </style>
 </head>
 <body>
@@ -52,16 +53,14 @@ body {
   <h1>
     Your session is booked!
   </h1>
-  <p>Thanks for scheduling a session with WebEaze. We've sent you an email with a calendar invite. 
-    
-    <br><strong>We look forward to speaking with you.</strong>
+  <p>Thanks for scheduling a session with WebEaze. We've sent you an email with a calendar invite.
 </p>
 
 <div class="spoiler">
-    <button class="btn btn-light btn-primary" onclick="toggleSpoiler()">Scheduled a phone call?</button>
+    <button class="btn btn-light btn-primary" style="background-color: transparent; color: white;" onclick="toggleSpoiler()">Scheduled a phone call?</button>
     <div class="spoiler-content" style="display: none;">
         <p>
-            If you scheduled a phone call, please ensure your phone is available at the scheduled time. We'll call you at the number you provided. Our number is (347) 377-2408. 
+            We'll call you at the number you provided from our phone number, (347) 377-2408. Please ensure your phone is available at your scheduled time. If you miss our call, you'll need to reschedule using the link in your confirmation email. 
         </p>
     </div>
 </div>
@@ -86,7 +85,7 @@ body {
     }
 </style>
 
-<p>In the meantime, check out our latest offers and Help Center for answers to common questions.</p>
+<p>In the meantime, check out our latest offers and Help Center for answers to common questions. </p>
 
     <a href="pricing.html" class="btn btn-light btn-lg" >View Offers</a>
 
